# Immortal-Zip

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  release.yml
android/: README.md  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: immortal-unzip.html
android/app/src/main/java/com/socrtwo/immortalunzip/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
chromeos/: README.md  background.js  manifest.json
immortal_zip/: __init__.py  cli.py  core.py  gui.py
ios/: README.md
ios/ImmortalUnzip/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  SceneDelegate.swift  ViewController.swift
ios/ImmortalUnzip.xcodeproj/: project.pbxproj
lib/: immortal-inflate.js  immortal-unzip.js
linux/: README.md  main.js  package.json  preload.js
macos/: README.md  entitlements.mac.plist  package.json
tests/: test_core.py
web/: README.md  app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
windows/: README.md  package.json
